[package]
name = "adventofcode"
version = "0.26.0"
authors = ["Narazaki, Shuji <shujinarazaki@protonmail.com>"]
edition = "2021"
default-run = "adventofcode"
rust-version = "1.83"

[dependencies]
aoc_macro = { version = "^0.2", path = "aoc_macro" }
clap = { version = "^4.5", features = ["derive"] }
itertools = { version = "^0.14", optional = true }
md-5 = { version = "^0.10", optional = true }
petgraph = { version = "0.7.0", optional = true }
rayon = { version = "^1.10", optional = true }
regex = { version = "^1.11", optional = true }
rustc_data_structures = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
splr = { version = "^0.17", optional = true }
winnow = "^0.6"

[features]
default = ["y2024"]
# default = ["y2024", "y2023", "y2022", "y2021", "y2020", "y2019", "y2018", "y2017", "y2016", "y2015"]
y2024 = ["itertools", "petgraph", "rayon"]
y2023 = ["itertools"]
y2022 = []
y2021 = ["itertools"]
y2020 = ["regex", "splr"]
y2019 = ["regex"]
y2018 = ["regex"]
y2017 = ["regex"]
y2016 = ["md-5", "regex"]
y2015 = ["itertools", "md-5", "regex"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
