[package]
name = "adventofcode"
version = "0.25.2"
authors = ["Narazaki, Shuji <shujinarazaki@protonmail.com>"]
edition = "2024"
autobins = false
default-run = "adventofcode"
rust-version = "1.85"

[[bin]]
name = "adventofcode"
path = "src/bin/adventofcode.rs"

[dependencies]
aoc_macro = { version = "^0.2", path = "aoc_macro" }
clap = { version = "^4.5", features = ["derive"] }
itertools = { version = "^0.14" }
md-5 = { version = "^0.10", optional = true }
petgraph = { version = "0.8.0", optional = true }
# plotters = { version = "0.3.7", features = ["histogram"] }
rayon = { version = "^1.10", optional = true }
rustc_data_structures = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
splr = { version = "^0.17", optional = true }
winnow = "^0.7"

[features]
# default = ["y2023"]
default = ["y2024", "y2023", "y2022", "y2021", "y2020", "y2019", "y2018", "y2017", "y2016", "y2015"]
y2024 = ["petgraph", "rayon"]
y2023 = []
y2022 = []
y2021 = []
y2020 = ["splr"]
y2019 = []
y2018 = []
y2017 = []
y2016 = ["md-5"]
y2015 = ["md-5"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
