(lang dune 3.20)

(name aoc)

(generate_opam_files true)

(source
 (github shnarazk/advent-of-code))

(authors "Narazaki, Shuji <shujinarazaki@protonmail.com>")

(maintainers "Narazaki, Shuji <shujinarazaki@protonmail.com>")

(license LICENSE)

(documentation https://github.com/shnarazk/advent-of-code/Ocaml5-AoC)

(package
 (name aoc)
 (synopsis "Advent-of-Code in Ocaml")
 (description "Advent-of-Code in Ocaml")
 (depends ocaml)
 (tags ("advent-of-code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
